# plan-de-estudios-UNLP

./: .gitignore  README.md  index.html  package-lock.json  package.json
public/careers/: analista.json  informatica.json  sistemas.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Badge.tsx  CareerSelector.tsx  CourseCard.tsx  Modal.tsx  OptativePlaceholder.tsx  OptativesView.tsx  StatsPanel.tsx
src/lib/: elegibility.ts
src/store/: usePlanStore.ts
src/types/: plan.ts
